# connection_sender

./: .gitignore  README.md  TEST.md  main_connections.py  main_withdraw.py  pyproject.toml  remote.sh  requirements.txt  run_connections_bot.sh  run_cron_job.sh
exceptions/: AccountRestrictedException.py  CaptchaNeededException.py  FailedAfterRetriesException.py  LastPageException.py  LoginException.py  NoCardWithPeopleException.py  NoConnectionException.py  NoMoreConnectionException.py  NoMoreOrgException.py  NoSendButtonException.py  ReachedDailyLimitSetException.py  ReachedLimitException.py  ReachedWeeklyLimitException.py  ReachedWithdrawLimitException.py  UnexpectedException.py  WebSessionExpired.py  __init__.py
linkedin/: __init__.py  linkedin.py  user_agents.py  utils.py
logger/: __init__.py  setup.py
notebooks/: check_email.ipynb
org/: orgs.csv  scrapping.ipynb
